--- a/iac-package/pyproject.toml
+++ b/iac-package/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["Riccardo Biosas <rbios@protonmail.com>"]
 readme = "README.md"
 packages = [
     {include = "tfsec_runner"},
+    {include = "checkov_runner"},
 ]
 
 [tool.poetry.dependencies]
@@ -17,6 +18,7 @@ packaging="23.0"
 requests="2.28.2"
 urllib3="1.26.15"
 websocket-client="1.5.1"
+checkov = "^2.3.141"
 
 
 [build-system]
