add support for multiple languages and directories to the SAST CI scans

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,4 +3,4 @@ sonar.projectKey=RiccardoBiosas_cloud-security-benchmarks
 
 sonar.project.monorepo.enabled=true
 sonar.scm.exclusions.disabled=true
-sonar.sources=./dvna_copy
+sonar.sources=./dvpwa_copy,./dvna_copy
